--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="paypal-form-wrapper">
-        <div class="paypal-form">
+        <form class="paypal-form">
             <h1>
                 <img class="booknow-icon" src="images/booknow.svg" alt="BOOK NOW">
                 <span>BOOK NOW</span>
@@ -44,14 +44,14 @@
                     </div>
                     <div class="paypal-form-input">
                         <input name="on2" type="hidden" value="Tour Date" />
-                        <input class="date-pick" maxlength="200" name="os2" type="date" id="calender" placeholder="Tour Date" required />
+                        <input class="date-pick" maxlength="200" name="os2" type="date" id="calender" placeholder="yyyy-mm-dd" required />
                     </div>
                 </div>    
             </div>
             <div class="paypal-form-field paypal-button-field">
-                <input type="image" src="images/paypal_logo.svg" name="submit">
+                <input id="paypalBtn" type="image" src="images/paypal_logo.svg" name="submit">
             </div>
-        </div>    
+        </form>
     </div>
 </body>
 </html>
