--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </div>
                     <div class="paypal-form-input">
                         <input name="on2" type="hidden" value="Tour Date" />
-                        <input class="date-pick" maxlength="200" name="os2" type="date" id="calender" placeholder="yyyy-mm-dd" required />
+                        <input class="date-pick" name="os2" type="date" id="calender" placeholder="yyyy-mm-dd" required />
                     </div>
                 </div>    
             </div>
