--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
                         <img class="input-field-icon" src="images/calender.svg" alt="Calender">
                         <label>Date: </label>
                     </div>
-                    <div class="paypal-form-input">
+                    <div class="paypal-form-input calender-wrapper">
                         <input name="on2" type="hidden" value="Tour Date" />
+                        <img class="input-field-icon" src="images/calender.svg" alt="Calender">
                         <input class="date-pick" name="os2" type="date" id="calender" placeholder="yyyy-mm-dd" required />
                     </div>
                 </div>    
