--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <img class="input-field-icon" src="images/people.svg" alt="People">
                         <label>Number of People: </label>
                     </div>
-                    <div class="paypal-form-input">
+                    <div class="paypal-form-input people-wrapper">
                         <input class="number-of-people" type="number" name="quantity" id="quantity" value="1" min="1" required />    
                     </div>
                 </div>
