update down arrow

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <input name="item_name" type="hidden" value="Tours" />
                     <select class="dropdown tour-name" name="item_name" id="tourName" >
                         <option value="Park Classic Tour">Park Classic Tour (Age 13 and up) ¥5,000 JPY</option>
-                        <option value="Park Classic Tour (Children)">Park Classic Tour (Age 6 to 12) ¥1,000 JPY</option>
+                        <option value="Park Classic Tour (Children)">Old Town Stroll (Age 13 and up) ¥3,000 JPY</option>
                     </select>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                         <label>Number of People: </label>
                     </div>
                     <div class="paypal-form-input people-wrapper">
-                        <input class="number-of-people" type="number" name="quantity" id="quantity" value="1" min="1" required />    
+                        <input class="number-of-people" type="number" name="quantity" id="quantity" value="1" min="1" max="9" required />    
                     </div>
                 </div>
                 <div class="paypal-form-field date-pick-field">
